--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,19 @@
       <artifactId>java-dotenv</artifactId>
       <version>5.2.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>weka-dev</artifactId>
+      <version>3.9.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>SMOTE</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>EXHANGE2</finalName>
